# MLstock

./: .env.example  .gitignore  AGENT.md  AGENTS.md  GAP_PROJECT_SPEC.md  MEMO.txt  PROJECT_SPEC.md  README.md  REPO_ID.txt  RUNBOOK.md  STATUS.md  config.yaml  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
config/: config.yaml  gap_config.yaml
scripts/: check_moomoo_kline.py  check_moomoo_probe.py  check_moomoo_snapshot.py  check_webull_auth.py  compare_3models.py  compare_gap_scan_alpaca_vs_moomoo.py  compare_moomoo_alpaca_open.py  compare_ridge_lgbm.py  deep_analysis_v2.py  full_compare.py  overfit_check.py  plot_gap_forward_dashboard.py  probe_moomoo_coverage_50.py  probe_universe_coverage.py  run_backfill_raw.py  run_backtest.ps1  run_backtest.py  run_build_snapshots.py  run_deadband_kpi.py  run_execution_rolling.py  run_exposure_calibration.py  run_exposure_rolling.py  run_force_liquidation.py  run_gap_dry_run_skip_options.ps1  run_gap_live_skip_options.ps1  run_gap_scan_moomoo_932.py  run_gap_scan_only.ps1  run_gap_trade.py  run_gate_off_sanity.py  run_ingest_assets.py  run_ingest_calendar.py  run_ng_streak_check.py  run_param_sweep.py  run_post_weekly_x.py  run_reclaim_executor_daily.ps1  run_setup_reference.py  run_validate_reference.py  run_volcap_sweep.py  run_weekly.ps1  run_weekly.py  (+7 more)
src/mlstock/: __main__.py  cli.py
src/mlstock.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/mlstock/brokers/: __init__.py  alpaca.py  base.py  webull.py
src/mlstock/config/: loader.py  schema.py
src/mlstock/data/alpaca/: client.py  endpoints.py
src/mlstock/jobs/: backtest.py  build_snapshots.py  gap_scanner.py  gap_scanner_moomoo_932.py  gap_trader.py  ingest_assets.py  ingest_bars.py  ingest_calendar.py  ingest_corp_actions.py  options_filter.py  seed_symbols.py  weekly.py
src/mlstock/logging/: logger.py
src/mlstock/model/: __init__.py  features.py  train.py
src/mlstock/risk/: regime.py  vol_cap.py
src/mlstock/validate/: reference.py
strategies/gap_d1_0935/: README.md  STATUS.md
strategies/gap_d1_0935/config/: strategy_gap_d1_0935.yaml
strategies/gap_d1_0935/docs/: strategy_gap_d1_0935_v1.md
strategies/gap_d1_0935/scripts/: analyze_gap_d1_regime.py  analyze_phase1_population.py  compare_gap_old_vs_0935.py  replay_gap_0935_watchlist.py  run_build_gap_d1_watchlist.py  run_gap_scan_0935_watchlist.py  run_reclaim_branch_backtest.py  run_reclaim_executor.py
tests/: test_alpaca_client_retry.py  test_assets_schema.py  test_backtest_regressions.py  test_build_snapshots.py  test_calendar_schema.py  test_cash_reserve.py  test_config.py  test_deadband_golden_metrics.py  test_deadband_kill_switch.py  test_deadband_sell_only_week_smoke.py  test_gap_d1_0935_strategy.py  test_gap_trader.py  test_idempotency_reference.py  test_ingest_bars_fetch.py  test_logger.py  test_paths.py  test_regime_gate_setup.py  test_training_window.py  test_weekly_optional_keep_priority.py
tools/: audit.ps1
(+163 files in other folders)
