[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlstock"
version = "0.1.0"
description = "Weekly US equity pipeline using Alpaca data."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "pandas",
    "pyarrow",
    "PyYAML",
    "python-dotenv",
    "joblib",
    "tweepy",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.ruff]
line-length = 120
exclude = [".venv"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
follow_imports = "silent"
show_error_codes = true
pretty = true
warn_unused_ignores = false
check_untyped_defs = false
ignore_errors = true
namespace_packages = false
disable_error_code = ["import-untyped", "unused-ignore"]
exclude = '(^|/)(\.venv|venv|build|dist|\.git)/|(^|/)conftest\.py$'